# File-Protector

./: .dockerignore  .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  Decryption.h  Dockerfile  Dockerfile-dev-build  Encryption.h  File-Protector  File_Protector  README.md  benchmark.cpp  build.sh  calculations.h  docker-compose.yml  helper_functions.cpp  helper_functions.h  main.cpp  setup-google-benchmark.sh  setup_google_benchmark.sh  start.sh  uint_bit_types.h
.github/workflows/: docker-publish.yml  greetings.yml  main.yml
